--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 
 [dependencies]
 log = "0.4"
-env_logger = "0.10"
 vulkano = "0.33"
+
+[dev-dependencies]
+env_logger = "0.10"
