--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -100,15 +100,38 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "004_graphical_pipeline",
+            "name": "004_create_image",
             "cargo": {
                 "args": [
                     "build",
-                    "--example=004_graphical_pipeline",
+                    "--example=004_create_image",
                     "--package=vulkan_engine"
                 ],
                 "filter": {
-                    "name": "004_graphical_pipeline",
+                    "name": "004_create_image",
+                    "kind": "example"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "RUST_LOG": "debug",
+                "CARGO_TERM_COLOR": "always",
+                "CARGO_TERM_PROGRESS_WHEN": "always"
+            }
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "005_graphical_pipeline",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--example=005_graphical_pipeline",
+                    "--package=vulkan_engine"
+                ],
+                "filter": {
+                    "name": "005_graphical_pipeline",
                     "kind": "example"
                 }
             },
